<resources>
    <string name="app_name">SQLiteLoginExample</string>


    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="or">or</string>

    <string name="name">Full Name</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Cell Number</string>

    <string name="electrician">Electrician</string>
    <string name="carpenter">Carpenter</string>
    <string name="plumber">Plumber</string>
    <string name="mechanic">Mechanic</string>
    <string name="gardner">Gardner</string>
    <string name="painter">Painter</string>


</resources>
